# uf

./: .gitignore  CNAME  README.md  pyproject.toml  test.html
.github/workflows/: python-tests.yml  update-uf-data.yml
docs/: CNAME  index.html
docs/data/: uf.json
tests/: __init__.py  test_scraper.py
tests/data/: expected.json  raw.html
uf/: scraper.py
www/: index.html
