[project]
name = "uf"
version = "0.1.0"
description = "Scraper para obtener valores de la UF desde el Banco Central de Chile"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "jinja2",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest]
testpaths = ["tests"]
